# dagster-postgres-pandas

./: README.md  pyproject.toml
dagster_postgres_pandas/: io_manager.py
tests/unit/: test_io_manager.py
